# EstructurasDeControl

./: CMakeLists.txt  evaluacionCalificacion.cpp  verificaAprobado.cpp  verificaCandidato.cpp  verificaPositivo.cpp  verificaPrimeraLetra.cpp
